--- a/tech.html
+++ b/tech.html
@@ -108,5 +108,33 @@
 
     <button class="bg-blue-600 text-white py-2 px-6 rounded-lg transition-all duration-300 transform hover:bg-blue-700 focus:outline-none mt-6">Read More Articles</button>
 </main>
+<!-- News Article Section -->
+<main class="text-center max-w-2xl mx-6">
+    <div class="bg-gray-800 p-6 rounded-lg shadow-lg">
+        <h2 class="text-4xl font-bold text-white mb-4">Upcoming Technology News: iPhone 17 Leaks</h2>
+        <p class="text-lg text-gray-300 mb-6">The highly anticipated iPhone 17 is already making waves with leaks about its design and features. While official announcements are yet to come, these leaks paint a picture of what we can expect from the device. From ultra-thin profiles to cutting-edge AI chip enhancements, this iPhone model could redefine the smartphone experience in 2025.</p>
+        <div class="text-left text-gray-300">
+            <h3 class="text-2xl font-semibold mb-4">Ultra-Slim Design and Display</h3>
+            <p class="mb-4">The iPhone 17 is rumored to bring a more refined design with slimmer bezels and a larger display size across the models. The Pro versions could see ProMotion technology (120Hz refresh rate) becoming standard on all models. The design changes are aimed at delivering a sleeker, more immersive user experience.</p>
+
+            <h3 class="text-2xl font-semibold mb-4">Enhanced Camera System</h3>
+            <p class="mb-4">The most exciting leak surrounds the iPhone 17's new camera system. It is rumored to have a unique central camera placement with a new mix of aluminum and glass on the back for a fresher aesthetic. Additionally, with a 24MP selfie camera and the powerful A19 chip, this iPhone is expected to raise the bar for mobile photography and videography.</p>
+
+            <h3 class="text-2xl font-semibold mb-4">Processor and AI Integration</h3>
+            <p class="mb-4">Powered by the A19 chip, the iPhone 17 will have significant AI integration, improving everything from performance to camera capabilities. With the potential for an Apple-designed modem chip, the iPhone 17 is expected to offer faster, more reliable connectivity. Enhanced AI capabilities are likely to make tasks like photo enhancements, voice assistant interactions, and augmented reality experiences more intuitive and responsive.</p>
+
+            <h3 class="text-2xl font-semibold mb-4">Battery Life and Charging Innovations</h3>
+            <p class="mb-4">One of the standout features could be battery optimization and new charging innovations. Leaks suggest improved power efficiency, likely making the iPhone 17 last longer than its predecessors. Expect faster charging speeds and better battery life, catering to users’ growing reliance on their phones for longer periods.</p>
+
+            <h3 class="text-2xl font-semibold mb-4">Should You Buy the iPhone 17?</h3>
+            <p class="mb-4">With numerous upgrades in design, processing power, and AI capabilities, the iPhone 17 is shaping up to be a revolutionary device. If you're someone who values the latest tech, camera enhancements, and performance boosts, it might be worth waiting for the official release. However, if you're looking for groundbreaking changes beyond incremental upgrades, it might be worth considering whether you need to upgrade immediately.</p>
+
+            <h3 class="text-2xl font-semibold mb-4">Stay Updated on iPhone 17 Leaks and Releases</h3>
+            <p class="mb-4">Stay tuned for more leaks and announcements as the iPhone 17's release approaches. The official details should surface around September 2025, but in the meantime, rumors and leaks will continue to provide hints at what to expect. Make sure to keep up with the latest tech news for all the information you need!</p>
+        </div>
+    </div>
+
+    <button class="bg-blue-600 text-white py-2 px-6 rounded-lg transition-all duration-300 transform hover:bg-blue-700 focus:outline-none mt-6">Read More Articles</button>
+</main>
 
 </body>
