--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             <!-- Navigation -->
             <nav class="mt-6">
                 <a href="tech.html" class="nav-link text-lg mx-3 hover:text-blue-400">Tech</a>
-                <a href="#art" class="nav-link text-lg mx-3 hover:text-blue-400">Art</a>
+                <a href="art.html" class="nav-link text-lg mx-3 hover:text-blue-400">Art</a>
                 <a href="#science" class="nav-link text-lg mx-3 hover:text-blue-400">Science</a>
                 <a href="#business" class="nav-link text-lg mx-3 hover:text-blue-400">Business</a>
                 <a href="#health" class="nav-link text-lg mx-3 hover:text-blue-400">Health</a>
