--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
                 <a href="#sports" class="nav-link text-lg mx-3 hover:text-blue-400">Sports</a>
                 <a href="#entertainment" class="nav-link text-lg mx-3 hover:text-blue-400">Entertainment</a>
                 <a href="#world" class="nav-link text-lg mx-3 hover:text-blue-400">World</a>
+                <a href="ai.html" class="nav-link text-lg mx-3 hover:text-blue-400">new AI!</a>
             </nav>
         </header>
 
