--- a/index.html
+++ b/index.html
@@ -38,12 +38,12 @@
             <nav class="mt-6">
                 <a href="tech.html" class="nav-link text-lg mx-3 hover:text-blue-400">Tech</a>
                 <a href="art.html" class="nav-link text-lg mx-3 hover:text-blue-400">Art</a>
-                <a href="#science" class="nav-link text-lg mx-3 hover:text-blue-400">Science</a>
-                <a href="#business" class="nav-link text-lg mx-3 hover:text-blue-400">Business</a>
-                <a href="#health" class="nav-link text-lg mx-3 hover:text-blue-400">Health</a>
-                <a href="#sports" class="nav-link text-lg mx-3 hover:text-blue-400">Sports</a>
-                <a href="#entertainment" class="nav-link text-lg mx-3 hover:text-blue-400">Entertainment</a>
-                <a href="#world" class="nav-link text-lg mx-3 hover:text-blue-400">World</a>
+                <a href="science.html" class="nav-link text-lg mx-3 hover:text-blue-400">Science</a>
+                <a href="business.html" class="nav-link text-lg mx-3 hover:text-blue-400">Business</a>
+                <a href="health.html" class="nav-link text-lg mx-3 hover:text-blue-400">Health</a>
+                <a href="sports.html" class="nav-link text-lg mx-3 hover:text-blue-400">Sports</a>
+                <a href="entertainment.html" class="nav-link text-lg mx-3 hover:text-blue-400">Entertainment</a>
+                <a href="world.html" class="nav-link text-lg mx-3 hover:text-blue-400">World</a>
                 <a href="ai.html" class="nav-link text-lg mx-3 hover:text-blue-400">new AI!</a>
             </nav>
         </header>
